Findbugs and checkstyle
git-svn-id: svn://svn.code.sf.net/p/jamon/code/trunk/jamon@2345 6afd1a24-8710-0410-9bc4-c69fca332c4c